# svanill-cli

./: Cargo.toml  README.md  svanill-edit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: crypto.rs  format.rs  lib.rs  main.rs  proc_utils.rs
