[package]
name = "svanill"
description = "A command line tool to encrypt/decrypt your sensitive data."
version = "0.2.0"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
homepage = "https://svanill.com"
repository = "https://github.com/svanill/svanill-cli"
license = "AGPL-3.0-or-later"
readme = "README.md"
edition = "2018"

[dependencies]
structopt = "0.3.26"
ring = "0.17.5"
data-encoding = "2.5.0"
lazy_static = "1.4.0"
rpassword = "7.3.1"
nix = "0.26.2"
libc = "0.2.149"
thiserror = "1.0.50"
anyhow = "1.0.75"
atty = "0.2.14"
